# imgl

./: .gitignore  CHANGELOG.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  index.html  layout.vql.imgl.json  layout.vql.json  local.dev.txt  planfile.yaml  pyproject.toml  screen.captured_at  screen.vql.imgl.json  screen.vql.json
.imgl/control/: layout.vql.imgl.json  layout.vql.json
.nlp2dsl/: environment.doql.less
.nlp2dsl/registry/: environment.doql.less
docs/: README.md  architecture.md  capture.md  control-layer.md  nl-shell-examples.md  voice-browser.md  vql-export.md  web-ui.md
examples/: README.md  img2nl-vql-flow.sh
examples/applications/dialog-form/: README.md
examples/applications/github-browser/: README.md
examples/applications/ide-editor/: README.md
examples/configurations/execute-desktop/: README.md
examples/configurations/llm-vision/: README.md
examples/configurations/ocr-filtered/: README.md
examples/configurations/per-window-llm/: README.md
examples/integrations/nlp2uri/: README.md
examples/integrations/python-api/: README.md
examples/integrations/uri2vql/: README.md
examples/scripts/: README.md  demo-agent-loop.sh  demo-github.sh  demo-nlp2uri.py  demo-windows.sh
examples/workflows/capture-to-action/: README.md
examples/workflows/multi-step-agent/: README.md
examples/workflows/web-ui/: README.md
examples/workflows/window-picker/: README.md
imgl/: __init__.py  __main__.py  actions.py  autodiag.py  capture.py  capture_provenance.py  catalog.py  catalog_filter.py  catalog_heuristic.py  catalog_types.py  cli.py  config.py  control.py  coords.py  core.py  diagnose.py  execute.py  freshness.py  geometry.py  installs.py  interact.py  layout.py  llm_catalog.py  nlp2uri.py  paths.py  pipeline.py  preprocess.py  scene_cache.py  targets.py  terminal_md.py  types.py  uri.py  vdisplay_bridge.py  vdisplay_context.py  vision_ops.py  window_scope.py
imgl/classify/: __init__.py  gui_heuristics.py
imgl/detect/: __init__.py  img2vql_bridge.py  local.py  rectangles.py
imgl/export/: __init__.py  _escape.py  actuation_layers.py  annotate_export.py  html_export.py  json_export.py  svg_export.py  vql_adapter.py
imgl/ocr/: __init__.py  base.py  lang.py  tesseract.py
imgl/web/: __init__.py  agent.py  app.py  session.py  thumbs.py
imgl/web/static/: index.html
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
testql-scenarios/: generated-api-smoke.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: conftest.py  test_actions.py  test_actuation_layers.py  test_annotate.py  test_autodiag.py  test_capture_paths.py  test_capture_provenance.py  test_capture_vdisplay.py  test_capture_vdisplay_priority.py  test_catalog_filter.py  test_catalog_interact.py  test_control_cli.py  test_detect_buttons.py  test_diagnose.py  test_execute_key.py  test_export.py  test_imgl.py  test_installs.py  test_layout_classify.py  test_llm_catalog.py  test_nlp2imgl_cli.py  test_nlp2imgl_control.py  test_nlp2imgl_llm.py  test_nlp2uri_fixes.py  test_ocr_lang.py  test_pytest_collection_health.py  test_scene_cache.py  test_targets.py  test_terminal_md.py  test_vdisplay_bridge.py  test_vision_ops.py  test_vql_export.py  test_web.py  test_window_scope.py
