[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgl"
version = "0.6.1"
description = "Image to Layout — screenshot OCR and semantic UI reconstruction"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"}
]
keywords = ["screenshot", "ocr", "ui", "layout", "html", "svg", "vql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pillow>=10.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
capture = [
    "mss>=9.0",
]
# vql/img2vql/img2nl are local sibling repos — not on PyPI:
#   pip install -e ~/github/oqlos/vql
#   pip install -e ~/github/oqlos/vql/packages/img2vql
#   pip install -e ~/github/wronai/img2nl[analyze]
diagnose = [
    "numpy>=1.24",
]
full = [
    "imgl[capture,diagnose,dev]",
]
dev = [
    "pytest>=8.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[project.scripts]
imgl = "imgl.cli:main"

[project.urls]
Homepage = "https://github.com/semcod/imgl"
Repository = "https://github.com/semcod/imgl"
Issues = "https://github.com/semcod/imgl/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["imgl*"]

[tool.setuptools.package-data]
imgl = ["py.typed"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
